added project lombok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Java Journal App
 server.port=3000
-spring.data.mongodb.uri=mongodb+srv://rushikesh22320064:A0oyPXGn7NPAPoJn@cluster0.3ceyvcw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://rushikesh22320064:yrEnx2oOmyHyDzHe@cluster0.3ceyvcw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=javajournal
+spring.data.mongodb.auto-index-creation=true
